# MyPdfView

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/megahed/mypdfview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/megahed/mypdfview/: MainActivity.java  MyPreferences.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/megahed/mypdfview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pdfView/: build.gradle
pdfView/src/androidTest/java/com/megahed/pdfview/: ExampleInstrumentedTest.java
pdfView/src/main/: AndroidManifest.xml
pdfView/src/main/cpp/: CMakeLists.txt  pdfsdk_jni.cpp
pdfView/src/main/java/com/megahed/pdfview/: AnimationManager.java  Bookmark.java  CacheManager.java  DecodingAsyncTask.java  DragPinchManager.java  Link.java  Meta.java  PDFView.java  PagesLoader.java  PdfFile.java  PdfPasswordException.java  PdfiumSDK.java  RenderingHandler.java
pdfView/src/main/java/com/megahed/pdfview/enms/: FitPolicy.java  ScrollDir.java  SnapEdge.java  State.java
pdfView/src/main/java/com/megahed/pdfview/exception/: FileNotFoundException.java  PageRenderingException.java
pdfView/src/main/java/com/megahed/pdfview/link/: DefaultLinkHandler.java  LinkHandler.java
pdfView/src/main/java/com/megahed/pdfview/listener/: Callbacks.java  OnDrawListener.java  OnErrorListener.java  OnLoadCompleteListener.java  OnLongPressListener.java  OnPageChangeListener.java  OnPageErrorListener.java  OnPageScrollListener.java  OnRenderListener.java  OnScrollListener.java  OnTapListener.java  OnZoomChangeListener.java
pdfView/src/main/java/com/megahed/pdfview/model/: Configurator.java  LinkTapEvent.java  PagePart.java
pdfView/src/main/java/com/megahed/pdfview/scroll/: DefaultScrollHandle.java  ScrollHandle.java
pdfView/src/main/java/com/megahed/pdfview/search/: FPDFTextSearchContext.java  SearchHandler.java  SearchHit.java  TextSearchContext.java
pdfView/src/main/java/com/megahed/pdfview/source/: AssetSource.java  ByteArraySource.java  DocumentSource.java  FileSource.java  InputStreamSource.java  UriSource.java
pdfView/src/main/java/com/megahed/pdfview/util/: ArrayUtils.java  Constants.java  CryptLab.java  FileUtils.java  FitPolicy.java  MathUtils.java  PageSizeCalculator.java  Size.java  SizeF.java  SnapEdge.java  Util.java
pdfView/src/test/java/com/megahed/pdfview/: ExampleUnitTest.java
